# rust-indexer

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  docker-compose.yml
migrations/: 20240408053833_init.down.sql  20240408053833_init.up.sql
src/: main.rs
