[package]
name = "server"
edition = "2021"
version = "0.0.1"
publish = false

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace]
members = [".", "./packages/core", "./packages/syncronizer"]

[dependencies]
fdx_core = { path = "./packages/core" }
fdx_sync = { path = "./packages/syncronizer" }
tokio = { workspace = true }

[workspace.dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
bincode = { version = "2.0.0-rc.3", features = ["default", "serde"] }
chrono = "0.4.37"
dotenvy = "0.15.7"
fuel-core = { version = "0.22", features = ["test-helpers"] }
fuels = "0.55.1"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
